All elements add. Styling added and mostly done. Responsiveness added to footer

--- a/index.html
+++ b/index.html
@@ -565,56 +565,56 @@
                 <div id="deals-container">
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals1.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">Deeper Connect Nano Decentralized VPN Cybersecurity Hardware</a>
                             <p><del>$299</del> <ins>$199.99</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals2.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">Super Boost Wi-Fi Repeater</a>
                             <p><del>$69</del> <ins>$26.99</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals3.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">KeepSolid VPN Unlimited: Lifetime Subscription</a>
                             <p><del>$199</del> <ins>$39.99</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals4.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">The 2021 Premium Python Certification Bootcamp Bundle</a>
                             <p><del>$2585</del> <ins>$34.99</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals5.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">SEONIFY SEO Tools & Visitor Analytics: Lifetime Subscription</a>
                             <p><del>$69</del> <ins>$29.99</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals6.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">The Complete 2021 Microsoft Azure Certification Prep Bundle</a>
                             <p><del>$1839</del> <ins>$39</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals7.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">Copysmith: Lifetime Subscription</a>
                             <p><del>$228</del> <ins>$69.99</ins></p>
                         </div>
                     </div>
                     <div class="deals-box">
                         <a href="#"><img src="assets/deals8.jpg"></a>
-                        <div>
+                        <div class="deals-box-heading">
                             <a href="#">Aryel AR Marketing Platform: Lifetime Subscription</a>
                             <p><del>$948</del> <ins>$69.99</ins></p>
                         </div>
@@ -623,20 +623,20 @@
             </article>
         </main>
         <footer>
-            <div>
+            <div id="footer-nav-container">
                 <div>
-                    <ul>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                    <ul id="footer-icons">
+                        <li><a href="#" class="fa fa-facebook-square"></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-youtube-play"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
+                        <li><a href="#" class="fa fa-pinterest-p"></a></li>
+                        <li><a href="#" class="fa fa-rss"></a></li>
+                        <li><a href="#" class="fa fa-envelope"></a></li>
                     </ul>
                 </div>
                 <div>
-                    <ul>
+                    <ul id="footer-links">
                         <li><a href="#">EVENTS</a></li>
                         <li><a href="#">ABOUT</a></li>
                         <li><a href="#">ADVERTISE</a></li>
@@ -645,7 +645,7 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div id="footer-copyright">
                 <p>The Next Web © 2006–2021 The Next Web B.V. Made with love in Amsterdam. Powered by StackPath</p>
             </div>
         </footer>
